--- a/nodejs_bot/Dockerfile
+++ b/nodejs_bot/Dockerfile
@@ -1,5 +1,6 @@
-# Используем легковесный образ Node.js
-FROM node:20-alpine
+# --- ЭТАП 1: Сборщик зависимостей ---
+# Используем полную версию Node.js для надежной компиляции пакетов
+FROM node:20 as builder
 
 # Устанавливаем рабочую директорию
 WORKDIR /app
@@ -7,11 +8,22 @@ WORKDIR /app
 # Копируем package.json и package-lock.json для установки зависимостей
 COPY package*.json ./
 
-# Устанавливаем зависимости, используя 'npm ci' для чистоты сборки
-RUN npm ci --only=production
+# Устанавливаем все зависимости, включая dev-зависимости, если они понадобятся для сборки
+RUN npm ci
 
-# Копируем исходный код бота
-COPY . .
+# --- ЭТАП 2: Финальный образ ---
+# Используем легковесный образ Node.js
+FROM node:20-alpine
+
+# Устанавливаем рабочую директорию
+WORKDIR /app
+
+# Копируем ИСКЛЮЧИТЕЛЬНО код нашего приложения
+COPY bot.js ./
+COPY .env.example ./
+
+# Копируем уже готовую папку node_modules из этапа "builder"
+COPY --from=builder /app/node_modules ./node_modules
 
 # Команда для запуска бота
 CMD ["node", "bot.js"]
