--- a/python_api/Dockerfile
+++ b/python_api/Dockerfile
@@ -1,37 +1,18 @@
-version: '3.8'
+# Используем официальный образ Playwright, в котором уже есть все зависимости
+FROM mcr.microsoft.com/playwright/python:v1.44.0-jammy
 
-services:
-  api:
-    build:
-      context: ./python_api
-      dockerfile: Dockerfile
-    restart: always
-    ports:
-      - "18361:18361"
-    env_file:
-      - ./python_api/.env
-    volumes:
-      - api_video_cache:/app/video_cache
-      - api_audio_cache:/app/audio_files
-      - api_temp_images:/app/temp_images
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:18361/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+# Устанавливаем рабочую директорию
+WORKDIR /app
 
-  bot:
-    build:
-      context: ./nodejs_bot
-      dockerfile: Dockerfile
-    restart: always
-    depends_on:
-      api:
-        condition: service_healthy
-    env_file:
-      - ./nodejs_bot/.env
+# Копируем файл с зависимостями и устанавливаем их
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-volumes:
-  api_video_cache:
-  api_audio_cache:
-  api_temp_images:
+# Копируем весь остальной код приложения
+COPY . .
+
+# Открываем порт, на котором будет работать API
+EXPOSE 18361
+
+# Команда для запуска приложения
+CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "18361"]
